# Fusion-Linux

./: .sparkleshare  Fusion Linux Sourceforge Git Howto  Fusion Linux todo  README  README.md  Roadmap.md  Untitled 1.odg  fusion-firstrun  fusion-setup-script.sh  fusion-welcome  grub.cfg
fuion-firstrun/: fusion-firstrun  fusion-firstrun.desktop.desktop
fusion-creator/: fusion-creator  fusion-creator.desktop  fusion-creator.desktop.desktop
fusion-creator/fusion-creator-libs/: check-internet-connection  dropbox  fedora-utils  fusion-linux-essentials  fusion-linux-essentials (Valent, Apr 18 19h29)  fusion-linux-essentials-verzija-s-rucnim-reposima  install-google-earth  install-skype  intro  redshift  wallpaper  yum-update
fusion-firstrun/: fusion-firstrun
fusion-repo/: fusion-linux.repo~
fusion-repo/fusion-14/: autoten-5.2-6.fc14.noarch.rpm  dockbarx-0.30-1.noarch.rpm  fedoraplus-1.0-3.fc14.noarch.rpm  fusion-linux-14-1.6-2.noarch.rpm  fusion-linux-release-14-12.noarch.rpm  fusion-linux-release-14-5.noarch.rpm  fusion-linux-release-14-6.noarch.rpm  fusion-linux-release-notes-14-12.noarch.rpm  fusion-linux-release-notes-14-5.noarch.rpm  fusion-linux-release-notes-14-6.noarch.rpm  fusion-linux-release-rawhide-14-12.noarch.rpm  fusion-linux-release-rawhide-14-5.noarch.rpm  fusion-linux-release-rawhide-14-6.noarch.rpm
fusion-repo/fusion-15/: autoplus-1.1-7.noarch.rpm
fusion-repo/fusion-16/: fedorautils-latest.noarch.rpm  fusion-linux.repo  wget update script  wget update script~
fusion-welcome/: fusion-welcome
fusion-welcome/fusion-welcome/: fusion-welcome.desktop
fusion-welcome/fusion-welcome-libs/: intro
fusion-welcome/fusion-welcome-zenity/: fusion-welcome
fusion-welcome/src/: fusion-welcome-firstrun.desktop
gsettings/: 01-fusion-settings
icons/Faience Icon Theme/: ChangeLog  INSTALL  README  UNINSTALL
kickstarts/: make_fusion_iso  make_fusion_iso (Valent, Oct 3 12h30)  make_iso  master  test  tips.txt
kickstarts/fedora-17/: fedora-install-fedora.ks  fedora-livecd-soas.ks  fedora-livedvd-scientific-kde.ks
kickstarts/fusion-14/: extreme-minimal.ks  fedora-live-base-14.ks  fedora-live-base.ks  fedora-live-mini.ks  fedora-live-minimization.ks  fedora-livecd-desktop.ks  fedora-livecd-lxde-14.ks  fusion-14-RC.ks  fusion-14-RC10.ks  fusion-14-RC2.ks  fusion-14-RC3.ks  fusion-14-RC4.ks  fusion-14-RC5.ks  fusion-14-RC7.ks  fusion-14-base.ks  fusion-14.ks  fusion-linux-14-base.ks  fusion-linux-14.1.ks  fusion-linux-14.2.ks  fusion-linux-14.ks  fusion-linux-15-base.ks  fusion-linux-15.0.1.ks  fusion-linux-15.0.ks  lxde-fedora-remix-14.ks  makeiso.sh
kickstarts/fusion-15/: custom-kickstarts-0.15.5-1.fc15.noarch.rpm  fedora-kickstarts-0.15.4-1.fc15.noarch.rpm  fedora-kickstarts-0.15.5-1.fc15.noarch.rpm  fedora-live-base.ks  fedora-live-desktop.ks  fedora-live-mini-16.ks  fedora-live-mini.ks  fedora-livecd-desktop.ks  fusion-linux-15.0.ks  fusion-linux-15.1.ks  fusion-live-base.ks  fusion-live-extras.ks  fusion-live-mini-gnome2-15.ks  spin-kickstarts-0.15.5-1.fc15.noarch.rpm
kickstarts/fusion-16/: 15-fusion-live-desktop.ks  fedora-live-base.ks  fedora-live-base.ks~  fedora-live-mini.ks  fusion-linux-16.1-full.ks  fusion-linux-16.1.ks  fusion-linux-16.1.ks~  fusion-linux-big-apps.ks  fusion-live-base.ks  fusion-live-desktop.ks  fusion-live-extras.ks  fusion-live-extras.ks~
kickstarts/fusion-16/fedora-kickstart/spin-kickstarts-0.16.2/: AUTHORS  Makefile.am  NEWS  fedora-live-kde-base.ks  fedora-livecd-soas.ks  spin-kickstarts.spec.in
kickstarts/fusion-16/fedora-kickstart/spin-kickstarts-0.16.2/l10n/: fedora-livecd-desktop-de_CH.ks  fedora-livecd-desktop-nl_NL.ks  fedora-livecd-desktop-pt_BR.ks  fedora-livecd-desktop-pt_PT.ks  fedora-livecd-kde-de_CH.ks  fedora-livecd-kde-nl_NL.ks  fedora-livecd-kde-pt_PT.ks  fedora-livecd-lxde-de_DE.ks  fedora-livedvd-electronic-lab-de_CH.ks  fedora-livedvd-electronic-lab-nl_NL.ks  fedora-livedvd-electronic-lab-pt_PT.ks  fedora-livedvd-games-de_CH.ks  fedora-livedvd-games-nl_NL.ks
kickstarts/fusion-17/: fedora-live-base.ks  fedora-live-desktop.ks  fedora-livecd-desktop.ks  fusion-linux-16.1.ks  fusion-linux-17.0-mini.ks  fusion-linux-17.0.ks  fusion-linux-big-apps.ks  fusion-live-base.ks  fusion-live-desktop.ks  fusion-live-extras.ks  fusion-live-minimization.ks  fusion-livecd-desktop.ks  old-fusion-linux-17.0.ks
kickstarts/fusion-18/: fedora-live-desktop.ks  fusion-linux-18.0.ks
kickstarts/fusion-19/: custom-kickstarts-0.19.8-1.fc19.noarch.rpm  fedora-kickstarts-0.19.8-1.fc19.noarch.rpm  fedora-live-cinnamon.ks  fedora-live-desktop.ks  fusion-linux-19.0.ks  fusion-linux-big-apps.ks  fusion-linux-mini.ks  fusion-linux.ks  fusion-live-extras.ks  spin-kickstarts-0.19.8-1.fc19.src.rpm
kicstarts/fusion-16/: .fusion-linux-16.0.ks.kate-swp  .goutputstream-KIZJ4V  fedora-live-base.ks  fedora-live-desktop.ks  fedora-live-mini.ks  fedora-live-minimization.ks  fedora-livecd-desktop.ks  fedora-livecd-meego.ks  fusion-linux-16.0.ks  fusion-linux-16.1.ks  fusion-live-extras.ks
kicstarts/fusion-16/fedora-kickstart/spin-kickstarts-0.16.2/: ChangeLog  Makefile.in  README  configure  configure.ac  fedora-live-kde.ks  fedora-livecd-design-suite.ks  fedora-livecd-lxde.ks  fedora-livecd-xfce.ks  spin-kickstarts.spec
kicstarts/fusion-16/fedora-kickstart/spin-kickstarts-0.16.2/custom/: README  qa-test-day.ks
kicstarts/fusion-16/fedora-kickstart/spin-kickstarts-0.16.2/l10n/: README  fedora-livecd-desktop-de_DE.ks  fedora-livecd-xfce-de_CH.ks  fedora-livecd-xfce-nl_NL.ks  fedora-livecd-xfce-pt_PT.ks
release notes/: Fusion Linux 13.2 Release Notes.txt  Fusion Linux 14 Release Notes.txt  Fusion Linux 14.1 Release Notes.txt  Fusion-Linux-14.1-Release-Notes (copy).txt  Fusion-Linux-16.1-Release-Notes.txt
rpm/: org.fusion.linux.settings.gschema.override
rpm packages/fusion-config/: fusion-config.spec  fusion-linux-config.spec
rpm packages/persidora/: parsidora-config-16.0.tar.bz2
rpm/faence-icon-theme/: README  faience-icon-theme-0.3-0.fc17.noarch.rpm  faience-icon-theme-0.3-0.fc17.src.rpm  (+1 more)
scripts/: irc-setup-script.sh
(+217 files in other folders)
