AC_INIT([spin-kickstarts], 0.16.2)
AC_SUBST([RELEASE], 1)

ALL_LINGUAS="bn_IN bn ca cs da de el es fi fr gl gu hi hr hu is it ja ko ml ms nb nl or pa pl pt pt_BR ru sk sl sr@latin sr sv ta tr uk zh_CN zh_TW"

AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

AC_SUBST(DATESTAMP,`date +"%a %b %d %Y"`)

AC_CONFIG_FILES([
Makefile
spin-kickstarts.spec
])

AC_OUTPUT
